<resources>
    <string name="app_name">Frets</string>
    <string name="action_settings">Settings</string>
    <string name="file">File:</string>
    <string name="play">Play</string>
    <string name="sdcard">/sdcard</string>
    <string name="external_card">ext_card/</string>
    <string name="share_file">Share…</string>
    <string name="search_hint">Search for something</string>
    <string name="up">Up</string>
    <string name="search_files">Search</string>
    <string name="refresh">Refresh</string>
    <string name="bpm">BPM:</string>
    <string name="no_notes">This track has no Notes, please select another</string>
    <string name="track_loaded">Track loaded.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="reset_msg">A reset email will be sent…</string>
    <string name="create_user_success">New User Created</string>
    <string name="enter_email_txt">Please enter a valid email address</string>
    <string name="enter_pwd_txt">Please enter a password</string>
    <string name="login_txt">Please enter a valid email address and a password to login.</string>
    <string name="create_user_txt">Please enter a valid email address and a password to register.</string>
    <string name="login_register">Login/Sign Up</string>
    <string name="invalid_pwd">Incorrect password - please try again</string>
    <string name="authenticating">Authenticating…</string>
    <string name="connection_error">Network connection failed. Please try again when you are connected.</string>
    <string name="max_retries_reached">Sorry - maximum retries reached.</string>
    <string name="oops">Oops!! Something went wrong. Soz</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="email_taken">This email is already registered.  Please login instead.</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="user_does_not_exist">Please enter a valid email address.  We don\'t have this one on our system</string>
    <string name="action_export">Export…</string>
    <string name="no_track">No track selected. Please select track to export</string>
    <string name="no_songs">No songs yet…</string>
    <string name="import_midi">Import Midi File…</string>
    <string name="buffering_msg">Loading…</string>
    <string name="invalid_file_type">This is not a Midi file.</string>
    <string name="description">Description</string>
    <string name="song_name">Song Name</string>
    <string name="song_details">Please enter the Song Details</string>
    <string name="play_button_content_description">Play Button</string>
    <string name="user_name">User Name</string>
    <string name="hello_user">"Hello "</string>
    <string name="back">Back</string>
    <string name="forward">forward</string>
    <string name="action_edit">Edit…</string>
    <string name="down">Down</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="save_file">Do you want to save this Fret?</string>
    <string name="fret_saved">Fret saved to: </string>
    <string name="save_failed">Failed to save Fret</string>
    <string name="action_del_track">Delete Track</string>
    <string name="action_solo_track">Make Solo track</string>
    <string name="action_rename_track">Rename Track...</string>
    <string name="action_test">MidiTest</string>
    <string name="solo_track">Solo Track</string>
    <string name="action_publish">Publish...</string>
    <string name="published">" published"</string>
    <string name="no">No</string>
    <string name="track">Track</string>
    <string name="action_save_song">Save song</string>
</resources>
