<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".fretviewer.FretEditActivity">
    <item
        android:id="@+id/action_del_track"
        android:orderInCategory="100"
        android:title="@string/action_del_track"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_solo_track"
        android:orderInCategory="101"
        android:title="@string/action_solo_track"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_rename_track"
        android:orderInCategory="102"
        android:title="@string/action_rename_track"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
