<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".fretviewer.FretEditActivity">
    <item
        android:id="@+id/action_save_song"
        android:orderInCategory="101"
        android:title="@string/action_save_song"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_preview_song"
        android:orderInCategory="102"
        android:title="@string/action_preview_song"
        android:icon="@drawable/ic_preview"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_publish"
        android:orderInCategory="103"
        android:title="@string/action_publish"
        android:icon="@drawable/ic_publish_song"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
