<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/layout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fretviewer.FretViewActivity">

    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/abc_control_padding_material"
        android:paddingStart="@dimen/abc_control_padding_material"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0.05"/>

    <Spinner
        android:id="@+id/track_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.85">

        <view
            android:id="@+id/fretview"
            class="com.bondevans.fretboard.freteditor.FretEditView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.05">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"
            android:id="@+id/prev_button"
            tools:ignore="Suspicious0dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:id="@+id/next_button"
            tools:ignore="Suspicious0dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/up"
            android:id="@+id/up_button"
            tools:ignore="Suspicious0dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/down"
            android:id="@+id/down_button"
            tools:ignore="Suspicious0dp"/>

    </LinearLayout>


</LinearLayout>
